# hdx-python-geo

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  ruff.toml
src/hdx/geo/: __main__.py  config.py
src/hdx/geo/esri/: __main__.py  config.py  download.py  utils.py
src/hdx/geo/parquet/: __main__.py  duckdb.py  gdal.py  geopandas.py
